--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["jsgui/**.ts", "docs/**.ts"],
+  "include": ["jsgui/**.mts", "docs/**.mts"],
   "compilerOptions": {
     "target": "es5",
     "lib": [
