--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "include": ["jsgui/**.mts", "docs/**.mts"],
   "compilerOptions": {
     "target": "ES6",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "ES6",
     "moduleResolution": "Bundler",
     "emitDeclarationOnly": true,
